Update Lagi Brow

--- a/about.html
+++ b/about.html
@@ -170,6 +170,13 @@
                         <span class="command-item-badge">Link</span>
                     </a>
                 </div>
+
+                <!-- No Results Message -->
+                <div class="command-no-results" id="commandNoResults" style="display: none;">
+                    <i class="bi bi-search command-no-results-icon"></i>
+                    <div class="command-no-results-title">No results found</div>
+                    <div class="command-no-results-desc">Try searching with different keywords</div>
+                </div>
             </div>
         </div>
     </div>
