--- a/blog.html
+++ b/blog.html
@@ -72,19 +72,19 @@
                         </div>
                         <span class="command-item-badge">Pages</span>
                     </a>
-                    <a href="blog.html" class="command-item current">
+                    <a href="blog.html" class="command-item">
                         <div class="command-item-left">
                             <i class="bi bi-rss command-item-icon"></i>
                             <span class="command-item-text">Blog</span>
                         </div>
-                        <span class="command-item-badge">You are here</span>
+                        <span class="command-item-badge">Pages</span>
                     </a>
-                    <a href="about.html" class="command-item">
+                    <a href="about.html" class="command-item current">
                         <div class="command-item-left">
                             <i class="bi bi-person command-item-icon"></i>
                             <span class="command-item-text">About</span>
                         </div>
-                        <span class="command-item-badge">Pages</span>
+                        <span class="command-item-badge">You are here</span>
                     </a>
                     <a href="contact.html" class="command-item">
                         <div class="command-item-left">
@@ -169,6 +169,13 @@
                         </div>
                         <span class="command-item-badge">Link</span>
                     </a>
+                </div>
+    
+                <!-- No Results Message -->
+                <div class="command-no-results" id="commandNoResults" style="display: none;">
+                    <i class="bi bi-search command-no-results-icon"></i>
+                    <div class="command-no-results-title">No results found</div>
+                    <div class="command-no-results-desc">Try searching with different keywords</div>
                 </div>
             </div>
         </div>
