--- a/project-detail.html
+++ b/project-detail.html
@@ -79,12 +79,12 @@
                         </div>
                         <span class="command-item-badge">Pages</span>
                     </a>
-                    <a href="about.html" class="command-item">
+                    <a href="about.html" class="command-item current">
                         <div class="command-item-left">
                             <i class="bi bi-person command-item-icon"></i>
                             <span class="command-item-text">About</span>
                         </div>
-                        <span class="command-item-badge">Pages</span>
+                        <span class="command-item-badge">You are here</span>
                     </a>
                     <a href="contact.html" class="command-item">
                         <div class="command-item-left">
@@ -138,6 +138,44 @@
                         </div>
                         <span class="command-item-badge">Link</span>
                     </a>
+                </div>
+                <div class="command-section">
+                    <div class="command-section-title">EXTERNAL LINKS</div>
+                    <a href="#" class="command-item">
+                        <div class="command-item-left">
+                            <i class="bi bi-heart-fill command-item-icon"></i>
+                            <span class="command-item-text">Support</span>
+                        </div>
+                        <span class="command-item-badge">Link</span>
+                    </a>
+                    <a href="#" class="command-item">
+                        <div class="command-item-left">
+                            <i class="bi bi-file-pdf command-item-icon"></i>
+                            <span class="command-item-text">CV PDF</span>
+                        </div>
+                        <span class="command-item-badge">Link</span>
+                    </a>
+                    <a href="#" class="command-item">
+                        <div class="command-item-left">
+                            <i class="bi bi-file-word command-item-icon"></i>
+                            <span class="command-item-text">CV Word</span>
+                        </div>
+                        <span class="command-item-badge">Link</span>
+                    </a>
+                    <a href="#" class="command-item">
+                        <div class="command-item-left">
+                            <i class="bi bi-files command-item-icon"></i>
+                            <span class="command-item-text">CV Copy</span>
+                        </div>
+                        <span class="command-item-badge">Link</span>
+                    </a>
+                </div>
+    
+                <!-- No Results Message -->
+                <div class="command-no-results" id="commandNoResults" style="display: none;">
+                    <i class="bi bi-search command-no-results-icon"></i>
+                    <div class="command-no-results-title">No results found</div>
+                    <div class="command-no-results-desc">Try searching with different keywords</div>
                 </div>
             </div>
         </div>
